# angry-moran-simulator

./: .coveragerc  .gitattributes  .gitignore  .gitpod.dockerfile  .gitpod.yml  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  documentation.md  entrypoint.sh  environment.yml  meta.yaml  paper.bib  paper.md  pyproject.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  auto_assign.yml
.github/ISSUE_TEMPLATE/: BLANK_TEMPLATE.md  BUG_REPORT_TEMPLATE.yml  FEATURE_REQUEST_TEMPLATE.yml  config.yml
.github/workflows/: build.yml  devdocker.yml  docs.yml  lint.yml  pr-assign.yml  pr-lint.yml  publish.yml  unit.yml
binder/: requirements.txt
docs/: conf.py  index.html  index.rst  requirements.txt
docs/_build/doctrees/: CHANGELOG.doctree  environment.pickle  index.doctree
docs/_build/doctrees/api/: internal-api.doctree  users-api.doctree
docs/_build/doctrees/general-info/: background.doctree  citing-contributing.doctree  example-results.doctree  installation.doctree  license.doctree  walkthrough.doctree
docs/_build/html/: .buildinfo  CHANGELOG.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: CHANGELOG.md.txt  index.rst.txt
docs/_build/html/_sources/api/: users-api.rst.txt
docs/_build/html/_sources/general-info/: citing-contributing.rst.txt  walkthrough.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_build/html/api/: internal-api.html  users-api.html
docs/_build/html/general-info/: background.html  citing-contributing.html  example-results.html  installation.html  license.html  walkthrough.html
docs/api/: internal-api.rst  users-api.rst
docs/custom/: changelog.rst  citing-contributing.rst  example-results.rst  installation.rst  internal-api.rst  license.rst  users-api.rst
docs/general-info/: background.rst  changelog.rst  example-results.rst  installation.rst  license.rst
env/: dev.yml  main.yml  test.yml
moran_simulator/: Individual.py  MoranProcess.py  __init__.py
moranpycess/: CustomExceptions.py  Individual.py  MoranProcess.py  MoranProcess2D.py  MoranProcess3D.py  __init__.py  exceptions.py
tests/: usecase.ipynb
tests/unit/: Individual.py  MoranProcess.py  MoranProcess2D.py  MoranProcess3D.py  __init__.py  context.py
