[metadata]
name = moranpycess
version = 0.0.2
author = Maciek Bak
author-email = wsciekly.maciek@gmail.com
url = https://github.com/AngryMaciek/angry-moran-simulator
description = Moran Process for multiple types of individuals
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = {keywords}
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7.4
packages = moranpycess
install_requires =
    numpy
