[metadata]
name = moranpycess
version = 1.0.8
author = Maciek Bak
author-email = wsciekly.maciek@gmail.com
url = https://github.com/AngryMaciek/angry-moran-simulator
description = Python framework for Moran Processes driven by game theory
long-description = file: dist/.pypi.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages = moranpycess
install_requires =
    matplotlib >= 3.3.0
    numpy >= 1.19.0
    pandas >= 1.0.2
    scipy >= 1.5.2
    seaborn >= 0.10.1
